tests/ui/comptime/trait_comptime.stderr
error[E0379]: functions in traits cannot be declared #[comptime]
  --> $DIR/trait_comptime.rs:4:5
   |
LL |       #[comptime]
   |       -^^^^^^^^^^
   |       |
   |  _____functions in traits cannot be #[comptime]
   | |
LL | |
   | |____- help: remove the `#[comptime]`

error[E0379]: functions in traits cannot be declared #[comptime]
  --> $DIR/trait_comptime.rs:8:5
   |
LL |       #[comptime]
   |       -^^^^^^^^^^
   |       |
   |  _____functions in traits cannot be #[comptime]
   | |
LL | |
   | |____- help: remove the `#[comptime]`

error[E0379]: functions in trait impls cannot be declared #[comptime]
  --> $DIR/trait_comptime.rs:21:5
   |
LL |       #[comptime]
   |       -^^^^^^^^^^
   |       |
   |  _____functions in trait impls cannot be #[comptime]
   | |
LL | |
   | |____- help: remove the `#[comptime]`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0379`.
